--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>cytoscape-edgehandles.js demo</title>
+    <title>CarpenTREE!</title>
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
@@ -47,7 +47,7 @@
   </head>
 
   <body>
-    <h1>CarpenTREE</h1>
+    <h1>Welcome to CarpenTREE</h1>
     <div id="cy"></div>
 
   </body>
